// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./index.stories Collapsed 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="w-[32rem] p-4"
    >
      <div
        class="bg-card text-card-foreground overflow-hidden text-sm has-[>img:first-child]:pt-0 *:[img:first-child]:rounded-t-xl *:[img:last-child]:rounded-b-xl group/card flex flex-col gap-6 py-6 rounded-lg item"
        data-radius="lg"
        data-size="default"
        data-slot="card"
        data-variant="default"
        style="--accordion-border-active: var(--color-success-light); --accordion-fill-active: var(--color-background-light);"
      >
        <div
          class="flex w-full flex-col"
          data-orientation="vertical"
          data-slot="accordion"
          dir="ltr"
          role="region"
        >
          <div
            class="not-last:border-b border-0"
            data-closed=""
            data-index="0"
            data-orientation="vertical"
            data-slot="accordion-item"
          >
            <h3
              class="flex"
              data-closed=""
              data-index="0"
              data-orientation="vertical"
            >
              <button
                aria-disabled="false"
                aria-expanded="false"
                class="focus-visible:ring-ring/50 focus-visible:border-ring focus-visible:after:border-ring **:data-[slot=accordion-trigger-icon]:text-muted-foreground cursor-pointer rounded-md py-4 text-left text-sm font-medium focus-visible:ring-[3px] **:data-[slot=accordion-trigger-icon]:ml-auto **:data-[slot=accordion-trigger-icon]:size-4 group/accordion-trigger relative flex flex-1 justify-between border border-transparent transition-all outline-none disabled:pointer-events-none disabled:opacity-50 data-disabled:pointer-events-none data-disabled:opacity-50 trigger items-center px-4"
                data-orientation="vertical"
                data-slot="accordion-trigger"
                data-testid="decoded-tx-summary"
                data-value=""
                id="base-ui-_r_2_"
                tabindex="0"
                type="button"
              >
                <div
                  class="flex w-full flex-row items-center justify-between"
                >
                  <span
                    class="m-0 text-sm leading-5 font-semibold"
                    data-slot="typography"
                    data-testid="tx-advanced-details"
                    data-variant="paragraph-small-bold"
                  >
                    Transaction details
                    <span
                      data-slot="tooltip-trigger"
                      id="base-ui-_r_4_"
                    >
                      <mock-icon
                        class="ml-1 inline size-4 align-middle text-[var(--color-border-main)]"
                      />
                    </span>
                  </span>
                  <span
                    class="gap-1 border font-medium transition-all has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 [&>svg]:size-3! inline-flex items-center justify-center w-fit whitespace-nowrap shrink-0 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive overflow-hidden group/badge border-border text-foreground [a]:hover:bg-muted [a]:hover:text-muted-foreground h-5 px-2 py-0.5 text-xs rounded-4xl methodChip"
                    data-slot="badge"
                    data-variant="outline"
                  >
                    native transfer
                  </span>
                </div>
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-down pointer-events-none shrink-0 group-aria-expanded/accordion-trigger:hidden"
                  data-slot="accordion-trigger-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-up pointer-events-none hidden shrink-0 group-aria-expanded/accordion-trigger:inline"
                  data-slot="accordion-trigger-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m18 15-6-6-6 6"
                  />
                </svg>
              </button>
            </h3>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`./index.stories Custom 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="w-[32rem] p-4"
    >
      <div
        class="bg-card text-card-foreground overflow-hidden text-sm has-[>img:first-child]:pt-0 *:[img:first-child]:rounded-t-xl *:[img:last-child]:rounded-b-xl group/card flex flex-col gap-6 py-6 rounded-lg item"
        data-radius="lg"
        data-size="default"
        data-slot="card"
        data-variant="default"
        style="--accordion-border-active: var(--color-info-dark); --accordion-fill-active: var(--color-info-background);"
      >
        <div
          class="flex w-full flex-col"
          data-orientation="vertical"
          data-slot="accordion"
          dir="ltr"
          role="region"
        >
          <div
            class="not-last:border-b border-0"
            data-closed=""
            data-index="0"
            data-orientation="vertical"
            data-slot="accordion-item"
          >
            <h3
              class="flex"
              data-closed=""
              data-index="0"
              data-orientation="vertical"
            >
              <button
                aria-disabled="false"
                aria-expanded="false"
                class="focus-visible:ring-ring/50 focus-visible:border-ring focus-visible:after:border-ring **:data-[slot=accordion-trigger-icon]:text-muted-foreground cursor-pointer rounded-md py-4 text-left text-sm font-medium focus-visible:ring-[3px] **:data-[slot=accordion-trigger-icon]:ml-auto **:data-[slot=accordion-trigger-icon]:size-4 group/accordion-trigger relative flex flex-1 justify-between border border-transparent transition-all outline-none disabled:pointer-events-none disabled:opacity-50 data-disabled:pointer-events-none data-disabled:opacity-50 trigger items-center px-4"
                data-orientation="vertical"
                data-slot="accordion-trigger"
                data-testid="decoded-tx-summary"
                data-value=""
                id="base-ui-_r_7_"
                tabindex="0"
                type="button"
              >
                <div
                  class="flex w-full flex-row items-center justify-between"
                >
                  <span
                    class="m-0 text-sm leading-5 font-semibold"
                    data-slot="typography"
                    data-testid="tx-advanced-details"
                    data-variant="paragraph-small-bold"
                  >
                    Transaction details
                    <span
                      data-slot="tooltip-trigger"
                      id="base-ui-_r_9_"
                    >
                      <mock-icon
                        class="ml-1 inline size-4 align-middle text-[var(--color-border-main)]"
                      />
                    </span>
                  </span>
                </div>
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-down pointer-events-none shrink-0 group-aria-expanded/accordion-trigger:hidden"
                  data-slot="accordion-trigger-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-up pointer-events-none hidden shrink-0 group-aria-expanded/accordion-trigger:inline"
                  data-slot="accordion-trigger-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m18 15-6-6-6 6"
                  />
                </svg>
              </button>
            </h3>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`./index.stories Expanded 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="w-[32rem] p-4"
    >
      <div
        class="bg-card text-card-foreground overflow-hidden text-sm has-[>img:first-child]:pt-0 *:[img:first-child]:rounded-t-xl *:[img:last-child]:rounded-b-xl group/card flex flex-col gap-6 py-6 rounded-lg item"
        data-radius="lg"
        data-size="default"
        data-slot="card"
        data-variant="default"
        style="--accordion-border-active: var(--color-success-light); --accordion-fill-active: var(--color-background-light);"
      >
        <div
          class="flex w-full flex-col"
          data-orientation="vertical"
          data-slot="accordion"
          dir="ltr"
          role="region"
        >
          <div
            class="not-last:border-b border-0"
            data-index="0"
            data-open=""
            data-orientation="vertical"
            data-slot="accordion-item"
          >
            <h3
              class="flex"
              data-index="0"
              data-open=""
              data-orientation="vertical"
            >
              <button
                aria-controls="base-ui-_r_b_"
                aria-disabled="false"
                aria-expanded="true"
                class="focus-visible:ring-ring/50 focus-visible:border-ring focus-visible:after:border-ring **:data-[slot=accordion-trigger-icon]:text-muted-foreground cursor-pointer rounded-md py-4 text-left text-sm font-medium focus-visible:ring-[3px] **:data-[slot=accordion-trigger-icon]:ml-auto **:data-[slot=accordion-trigger-icon]:size-4 group/accordion-trigger relative flex flex-1 justify-between border border-transparent transition-all outline-none disabled:pointer-events-none disabled:opacity-50 data-disabled:pointer-events-none data-disabled:opacity-50 trigger items-center px-4"
                data-orientation="vertical"
                data-panel-open=""
                data-slot="accordion-trigger"
                data-testid="decoded-tx-summary"
                data-value="tx-details"
                id="base-ui-_r_c_"
                tabindex="0"
                type="button"
              >
                <div
                  class="flex w-full flex-row items-center justify-between"
                >
                  <span
                    class="m-0 text-sm leading-5 font-semibold"
                    data-slot="typography"
                    data-testid="tx-advanced-details"
                    data-variant="paragraph-small-bold"
                  >
                    Transaction details
                    <span
                      data-slot="tooltip-trigger"
                      id="base-ui-_r_e_"
                    >
                      <mock-icon
                        class="ml-1 inline size-4 align-middle text-[var(--color-border-main)]"
                      />
                    </span>
                  </span>
                  <span
                    class="gap-1 border font-medium transition-all has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 [&>svg]:size-3! inline-flex items-center justify-center w-fit whitespace-nowrap shrink-0 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive overflow-hidden group/badge border-border text-foreground [a]:hover:bg-muted [a]:hover:text-muted-foreground h-5 px-2 py-0.5 text-xs rounded-4xl methodChip"
                    data-slot="badge"
                    data-variant="outline"
                  >
                    native transfer
                  </span>
                </div>
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-down pointer-events-none shrink-0 group-aria-expanded/accordion-trigger:hidden"
                  data-slot="accordion-trigger-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-up pointer-events-none hidden shrink-0 group-aria-expanded/accordion-trigger:inline"
                  data-slot="accordion-trigger-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m18 15-6-6-6 6"
                  />
                </svg>
              </button>
            </h3>
            <div
              aria-labelledby="base-ui-_r_c_"
              class="data-open:animate-accordion-down data-closed:animate-accordion-up text-sm overflow-hidden"
              data-index="0"
              data-open=""
              data-orientation="vertical"
              data-slot="accordion-content"
              data-testid="decoded-tx-details"
              id="base-ui-_r_b_"
              role="region"
              style="--accordion-panel-height: auto; --accordion-panel-width: auto;"
            >
              <div
                class="[&_:where(a:hover)]:text-foreground h-(--accordion-panel-height) data-ending-style:h-0 data-starting-style:h-0 [&_a]:underline [&_a]:underline-offset-3 [&>p:not(:last-child)]:mb-4 content p-4"
              >
                <div
                  class="text-sm"
                >
                  Decoded call data goes here
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`./index.stories SettingsChange 1`] = `
<div
  style="background-color: rgb(255, 255, 255); padding: 1rem;"
>
  <div
    class="shadcn-scope"
  >
    <div
      class="w-[32rem] p-4"
    >
      <div
        class="bg-card text-card-foreground overflow-hidden text-sm has-[>img:first-child]:pt-0 *:[img:first-child]:rounded-t-xl *:[img:last-child]:rounded-b-xl group/card flex flex-col gap-6 py-6 rounded-lg item"
        data-radius="lg"
        data-size="default"
        data-slot="card"
        data-variant="default"
        style="--accordion-border-active: var(--warning-accent); --accordion-fill-active: var(--warning-subtle);"
      >
        <div
          class="flex w-full flex-col"
          data-orientation="vertical"
          data-slot="accordion"
          dir="ltr"
          role="region"
        >
          <div
            class="not-last:border-b border-0"
            data-index="0"
            data-open=""
            data-orientation="vertical"
            data-slot="accordion-item"
          >
            <h3
              class="flex"
              data-index="0"
              data-open=""
              data-orientation="vertical"
            >
              <button
                aria-controls="base-ui-_r_g_"
                aria-disabled="false"
                aria-expanded="true"
                class="focus-visible:ring-ring/50 focus-visible:border-ring focus-visible:after:border-ring **:data-[slot=accordion-trigger-icon]:text-muted-foreground cursor-pointer rounded-md py-4 text-left text-sm font-medium focus-visible:ring-[3px] **:data-[slot=accordion-trigger-icon]:ml-auto **:data-[slot=accordion-trigger-icon]:size-4 group/accordion-trigger relative flex flex-1 justify-between border border-transparent transition-all outline-none disabled:pointer-events-none disabled:opacity-50 data-disabled:pointer-events-none data-disabled:opacity-50 trigger items-center px-4"
                data-orientation="vertical"
                data-panel-open=""
                data-slot="accordion-trigger"
                data-testid="decoded-tx-summary"
                data-value="tx-details"
                id="base-ui-_r_h_"
                tabindex="0"
                type="button"
              >
                <div
                  class="flex w-full flex-row items-center justify-between"
                >
                  <span
                    class="m-0 text-sm leading-5 font-semibold"
                    data-slot="typography"
                    data-testid="tx-advanced-details"
                    data-variant="paragraph-small-bold"
                  >
                    Transaction details
                    <span
                      data-slot="tooltip-trigger"
                      id="base-ui-_r_j_"
                    >
                      <mock-icon
                        class="ml-1 inline size-4 align-middle text-[var(--color-border-main)]"
                      />
                    </span>
                  </span>
                </div>
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-down pointer-events-none shrink-0 group-aria-expanded/accordion-trigger:hidden"
                  data-slot="accordion-trigger-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-up pointer-events-none hidden shrink-0 group-aria-expanded/accordion-trigger:inline"
                  data-slot="accordion-trigger-icon"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m18 15-6-6-6 6"
                  />
                </svg>
              </button>
            </h3>
            <div
              aria-labelledby="base-ui-_r_h_"
              class="data-open:animate-accordion-down data-closed:animate-accordion-up text-sm overflow-hidden"
              data-index="0"
              data-open=""
              data-orientation="vertical"
              data-slot="accordion-content"
              data-testid="decoded-tx-details"
              id="base-ui-_r_g_"
              role="region"
              style="--accordion-panel-height: auto; --accordion-panel-width: auto;"
            >
              <div
                class="[&_:where(a:hover)]:text-foreground h-(--accordion-panel-height) data-ending-style:h-0 data-starting-style:h-0 [&_a]:underline [&_a]:underline-offset-3 [&>p:not(:last-child)]:mb-4 content p-4"
              >
                <div
                  class="text-sm"
                >
                  Decoded call data goes here
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
